--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </section>
 
       <section id="inputSect">
-        <input type="text" class="bluebg-input" />
+        <input type="text" class="bluebg-input" placeholder="0" />
       </section>
 
       <section class="calcDetails">
