fixed adding multiple decimals whereas only one is needed, and also fixed some mobile devices issue of overlapping footer

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="button numb__operator">-</div>
         <div class="button numb__operator">x</div>
         <div class="button numb__operator">/</div>
-        <div class="button numb__operator">.</div>
+        <button class="button numb__operator">.</button>
         <div class="button equal">=</div>
         <div class="button reset">reset</div>
         <div class="button delete">del</div>
